--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel" 
-        xmlns:model="clr-namespace:Model;assembly=Model" d:DataContext="{d:DesignInstance Type=model:BallModel}"
+        xmlns:model="clr-namespace:Model;assembly=Model"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="900">
     <Grid>
