--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,16 +1,18 @@
-﻿<Window x:Class="View.MainWindow"
+﻿ <Window x:Class="View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:model="clr-namespace:Model;assembly=Model"
+         xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="900">
     <Grid>
-
+        <Grid.DataContext>
+            <viewmodel:ViewModelApi/>
+        </Grid.DataContext>
         <TextBox HorizontalAlignment="Left" Margin="21,14,0,0" Text="{Binding BallCounterHandler, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Height="18"/>
         <Button Content="Start" HorizontalAlignment="Left" Margin="117,10,0,0" VerticalAlignment="Top" Width="70" Height="25" Command="{Binding EnableSignal}" IsEnabled="{Binding IsEnabledHandler}"/>
-        <Button Content="Stop" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Width="70" Height="26" Command="{Binding DisableSignal}" Grid.Column="1" IsEnabled="{Binding IsDisabledHandler, Mode=OneWay}"/>
+        <Button Content="Stop" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Width="70" Height="26" Command="{Binding DisableSignal}" Grid.Column="1" IsEnabled="{Binding IsDesibledHandler, Mode=OneWay}"/>
 
         <Border BorderThickness="2" BorderBrush="Black" Height="520" Width="500">
             <ItemsControl ItemsSource="{Binding BallsListHandler}">
